Add favicon to header.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<title><%= title //if else is no nessesery becouse we use default res.locals.title if there is no defined title in route %></title>
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<!-- Modernizr - for old browsers witch don't support e.g. animations -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 	<script type="text/javascript" src="/js/typed.js"></script>
+	<link rel="shortcut icon" href="/public/images/favicon.ico" />
+	<link href="/public/images/favicon.ico" rel="SHORTCUT ICON" />
 	<link rel="stylesheet" type="text/css" href="/stylesheets/<%= css %>.css">
-	<title><%= title //if else is no nessesery becouse we use default res.locals.title if there is no defined title in route %></title>
 </head>
 <body>
 
