--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 	<script type="text/javascript" src="/js/typed.js"></script>
-	<link rel="shortcut icon" href="/public/images/favicon.ico" />
-	<link href="/public/images/favicon.ico" rel="SHORTCUT ICON" />
+	<link rel="shortcut icon" href="/images/favicon.ico" />
+	<link href="/images/favicon.ico" rel="SHORTCUT ICON" />
 	<link rel="stylesheet" type="text/css" href="/stylesheets/<%= css %>.css">
 </head>
 <body>
