--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,29 +1,92 @@
 <% include partials/header %>
 
-<div id="landing-header">
-	<h1>Find INSTRUCTOR near You!</h1>
-	<h3>Learn <span id="typed"></span> with best Experts</h3>
-	<hr>
-	<a href="/trainings" class="btn btn-lg btn-danger">See Our Trainings <i class="fa fa-mouse-pointer" aria-hidden="true"></i></a>
+<div id="landing-header" class="container">
+	<!-- <h1>Find an INSTRUCTOR <span style="color: #d30f10">near</span> You!</h1> -->
+	<h1>Find an INSTRUCTOR <span id="typed"></span></h1>
+	<!--
+		... nearby
+		... close to You
+		... in your area
+	-->
 
 	<div id="typed-strings">
-		<p><a href="#">MS Excel</a></p>
+		<p><a href="#"><span style="color: #d30f10">near</span> you!</a></p>
+		<p><a href="#"><span style="color: #d30f10">online</span>!</a></p>
+		<!-- <p><a href="#">MS Excel</a></p>
 		<p><a href="#">Business Intelligence</a></p>
 		<p><a href="#">Visual Basic</a></p>
-		<p><a href="#">Google Docs</a></p>
+		<p><a href="#">Google Docs</a></p> -->
 	</div>
-
+	<!-- <h3>Learn <span id="typed"></span> with the best Experts</h3> -->
+	
+	<hr>
+	<form action="" method="get" accept-charset="utf-8" class="col-10">
+		<div class="form-row">	
+			<div class="col-lg-5 col-sm-12">
+				<input list="courses" placeholder="What do you want to learn?"  class="form-control-lg col-12">
+				<datalist id="courses">
+				  <option value="MS Excel">
+				  <option value="MS Word">
+				  <option value="Other MS Office courses">
+				  <option value="Business Intelligence">
+				  <option value="VBA (Visual Basic for Applications)">
+				  <option value="Google Docs">
+				</datalist>
+				
+			</div>	
+			<div class="col">
+				<input list="cities" placeholder="City or country" class="form-control-lg">
+				<datalist id="cities">
+				  <optgroup label="Europe">
+					  <option value="Warsaw">
+					  <option value="London">
+					  <option value="Dublin">
+				  </optgroup>
+				  <optgroup label="United States">
+					  <option value="New York">
+					  <option value="Los Angeles">
+					  <option value="Chicago">
+				  </optgroup>
+				</datalist>
+			</div>	
+			<div class="col">
+				<a href="/trainings" class="btn btn-lg btn-danger"><i class="fa fa-search fa-lg" aria-hidden="true"></i><!-- See Our Trainings --> Find an Instructor</a>
+			</div>
+		</div>
+	</form>
 	<script>
 		var typed = new Typed('#typed', {
 			stringsElement: '#typed-strings',
-			typeSpeed: 35,
+			typeSpeed: 70,
 			loop: true,
 			backDelay: 1000,
 			showCursor: false
 		});
 	</script>
-</div>
 
+</div>
+	<section id="benefits" class="bg-white" style="margin-top: 180px; width: 100%; height: 100%; z-index: 1; position: relative;">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3">
+					<h4>Choose an Instructor</h4>
+					<p>From our selected Experts with many reviews.</p>
+				</div>
+				<div class="col-sm-3">
+					<h4>Select prefered dates</h4>
+					<p>Choose dates and prices wich suites you best.</p>
+				</div>
+				<div class="col-sm-3">
+					<h4>Personalize training</h4>
+					<p>Fill a test to get Your personalize qotation in 5 minuts.</p>
+				</div>
+				<div class="col-sm-3">
+					<h4>Make a progress</h4>
+					<p>Take a training, benchmark yourself and ask questions online.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 <ul class="slideshow">
 	<li></li>
 	<li></li>
