--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<title><%= title //if else is no nessesery becouse we use default res.locals.title if there is no defined title in route %></title>
-	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> -->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<!-- Modernizr - for old browsers witch don't support e.g. animations -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
@@ -71,9 +71,9 @@
 			</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="nav navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="#">Find Trainers</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Instructors</a></li>
 				<li class="nav-item dropdown">
-					<a href="/trainings" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Find Trainings <span class="caret"></span></a>
+					<a href="/trainings" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <span class="caret"></span></a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						<a class="dropdown-item" href="#">Computer Basics</a>
 						<a class="dropdown-item" href="#">MS Office</a>
@@ -85,7 +85,7 @@
 					</div>
 				</li>
 				<li class="nav-item dropdown">
-					<a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Country <span class="caret"></span></a>
+					<a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Countries <span class="caret"></span></a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						<a class="dropdown-item" href="#">Germany</a>
 						<a class="dropdown-item" href="#">Poland</a>
@@ -99,9 +99,6 @@
 			</ul>
 
 			<ul class="navbar-nav ml-auto"> <!-- ml-auto == margin left auto -->
-				<li class="nav-item active">
-					<a class="nav-link" href="/trainings/new">Add a New Training <span class="sr-only">(current)</span></a>
-				</li>
 				<!-- Check if there is var currentUser passed to EJS template from app.js -->
 				<% if(!currentUser){ %>
 				<li class="nav-item">
@@ -110,7 +107,13 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/register">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="/trainings/new">Are You an instructor? <span class="fa fa-graduation-cap"></span> <span class="sr-only">(current)</span></a>
+				</li>
 				<% } else { %>
+				<li class="nav-item active">
+					<a class="nav-link" href="/trainings/new">Add a new Training <span class="fa fa-graduation-cap"></span> <span class="sr-only">(current)</span></a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/logout">Logout (<%= currentUser.username %>) <i class="fa fa-user" aria-hidden="true"></i></a>
 				</li>
