add icons to homepage

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -108,11 +108,11 @@
 					<a class="nav-link" href="/register">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="/trainings/new">Are You an instructor? <span class="fa fa-graduation-cap"></span> <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/trainings/new">Are You an instructor? <i class="fa fa-graduation-cap"></i> <span class="sr-only">(current)</span></a>
 				</li>
 				<% } else { %>
 				<li class="nav-item active">
-					<a class="nav-link" href="/trainings/new">Add a new Training <span class="fa fa-graduation-cap"></span> <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/trainings/new">Add a new Training <i class="fa fa-graduation-cap"></i> <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/logout">Logout (<%= currentUser.username %>) <i class="fa fa-user" aria-hidden="true"></i></a>
