--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -53,9 +53,18 @@ hr {
 	/*margin:1%;*/
 }
 
+#benefits {
+	margin-top: 180px;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	position: relative;
+}
+
 #benefits h4 {
+	font-size: 22px;
 	color: #004581;
-	margin-top: 5px;
+	margin-top: 10px;
 }
 
 /*
