--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,24 +65,24 @@
 	</script>
 
 </div>
-	<section id="benefits" class="bg-white" style="margin-top: 180px; width: 100%; height: 100%; z-index: 1; position: relative;">
+	<section id="benefits" class="bg-white">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
-					<h4>Choose an Instructor</h4>
-					<p>From our selected Experts with many reviews.</p>
+					<h4><i class="fa fa-address-book"></i> <!-- <i class="fa fa-id-badge"></i> --> Choose an Instructor</h4>
+					<p>Search our selected Experts using they fees, specializations, locations and user reviews.</p>
 				</div>
 				<div class="col-sm-3">
-					<h4>Select prefered dates</h4>
-					<p>Choose dates and prices wich suites you best.</p>
+					<h4><i class="fa fa-calendar"></i> Select prefered dates</h4>
+					<p>Tell your instructor When, Where and How do you want to learn. Get response directly.</p>
 				</div>
 				<div class="col-sm-3">
-					<h4>Personalize training</h4>
-					<p>Fill a test to get Your personalize qotation in 5 minuts.</p>
+					<h4><i class="fa fa-child"></i><!-- <i class="fa fa-check-square"></i> --> Personalize a training</h4>
+					<p>Fill a knowledge & needs assesment to get personalized qotation in 5 minuts. Decide and pay online.</p>
 				</div>
 				<div class="col-sm-3">
-					<h4>Make a progress</h4>
-					<p>Take a training, benchmark yourself and ask questions online.</p>
+					<h4><i class="fa fa-thumbs-up"></i><!-- <i class="fa fa-level-up"></i> --> Make a progress</h4>
+					<p>Take a training, <!-- benchmark yourself --> measure & compare your skills, share certificate and <!-- ask questions --> get online support after your course.</p>
 				</div>
 			</div>
 		</div>
