--- a/views/trainings/index.ejs
+++ b/views/trainings/index.ejs
@@ -9,7 +9,7 @@
 			<p class="lead">Join our team of professionals and boost Your incomes!<br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			<p>
-				<a class="btn btn-primary btn-lg" href="/trainings/new">Add a New Training</a>
+				<a class="btn btn-primary btn-lg" href="/teach">Add a New Training</a>
 			</p>
 		</div>
 	</header>
