--- a/views/instructors-lp.ejs
+++ b/views/instructors-lp.ejs
@@ -2,7 +2,7 @@
 
 <div id="landing-header" class="container">
 	<!-- <h1>Find an INSTRUCTOR <span style="color: #d30f10">near</span> You!</h1> -->
-	<h1>Find an INSTRUCTOR <span id="typed"></span></h1>
+	<h1>Share knowledge and earn money<!--  - <span id="typed"></span> --></h1>
 	<!--
 		Trainer / Instructor / Mentor / Prelegent / Tutor ==> an Expert (not only for courses, but also for konferences or 1:1 tutoring, mentoring, 1:1 live programming)
 
@@ -11,49 +11,31 @@
 		... in your area
 	-->
 
-	<div id="typed-strings">
+	<!-- <div id="typed-strings">
 		<p><a href="#"><span style="color: #d30f10">near</span> you!</a></p>
 		<p><a href="#"><span style="color: #d30f10">online</span>!</a></p>
-		<!-- <p><a href="#">MS Excel</a></p>
+		<p><a href="#">MS Excel</a></p>
 		<p><a href="#">Business Intelligence</a></p>
 		<p><a href="#">Visual Basic</a></p>
-		<p><a href="#">Google Docs</a></p> -->
-	</div>
+		<p><a href="#">Google Docs</a></p>
+	</div> -->
 	<!-- <h3>Learn <span id="typed"></span> with the best Experts</h3> -->
-	<h3>Search among 117 500 our experts, mentors and prelegents.</h3>
+	<h3>Edukey connects experts, mentors & prelegents with clients.</h3>
 	
 	<hr>
 	<form action="" method="get" accept-charset="utf-8" class="col-10">
 		<div class="form-row">	
-			<div class="col-lg-5 col-sm-12">
-				<input list="courses" placeholder="What do you want to learn?"  class="form-control-lg col-12">
-				<datalist id="courses">
-				  <option value="MS Excel">
-				  <option value="MS Word">
-				  <option value="Other MS Office courses">
-				  <option value="Business Intelligence">
-				  <option value="VBA (Visual Basic for Applications)">
-				  <option value="Google Docs">
-				</datalist>
-				
+			<div class="col-lg-3 col-sm-12">
+				<input placeholder="Your email address"  class="form-control-lg col-12">	
 			</div>	
-			<div class="col">
-				<input list="cities" placeholder="City or country" class="form-control-lg">
-				<datalist id="cities">
-				  <optgroup label="Europe">
-					  <option value="Warsaw">
-					  <option value="London">
-					  <option value="Dublin">
-				  </optgroup>
-				  <optgroup label="United States">
-					  <option value="New York">
-					  <option value="Los Angeles">
-					  <option value="Chicago">
-				  </optgroup>
-				</datalist>
+			<div class="col-lg-3 col-sm-12">
+				<input placeholder="Create password" class="form-control-lg col-12">
 			</div>	
-			<div class="col">
-				<a href="/trainings" class="btn btn-lg btn-danger"><i class="fa fa-search fa-lg" aria-hidden="true"></i><!-- See Our Trainings --> Find an Instructor</a>
+			<div class="col-lg-3 col-sm-12">
+				<a href="/register" class="btn btn-lg btn-danger col-12"><i class="fa fa-user-plus fa-lg" aria-hidden="true"></i> Sign up</a>
+			</div>
+			<div class="col-lg-3 col-sm-12">
+				<a href="#" class="btn btn-lg btn-primary col-12"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i> Facebook Sign up</a>
 			</div>
 		</div>
 	</form>
