--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -108,7 +108,7 @@
 					<a class="nav-link" href="/register">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="/trainings/new">Are You an instructor? <i class="fa fa-graduation-cap"></i> <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/teach">Are You an instructor? <i class="fa fa-graduation-cap"></i> <span class="sr-only">(current)</span></a>
 				</li>
 				<% } else { %>
 				<li class="nav-item active">
